--- a/frontend/src/pages/Popup/Popup.css
+++ b/frontend/src/pages/Popup/Popup.css
@@ -7,19 +7,20 @@
   text-align: center;
   height: 100%;
   padding: 10px;
-  background-color: #282c34;
+  background-image: radial-gradient(circle, #146091, #104572); 
 }
 
 .App-logo {
-  height: 30vmin;
+  height: 20vmin;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
+/* Causes Spinning */
+/* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+} */
 
 .App-header {
   height: 100%;
@@ -35,14 +36,15 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+/* Causes Spinning */
+/* @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
-}
+} */
 /* Popup.css */
 /* ... Your existing CSS styles ... */
 
