--- a/frontend/src/pages/Content/content.styles.css
+++ b/frontend/src/pages/Content/content.styles.css
@@ -6,9 +6,9 @@
 }
 
 .tooltip-content {
-  display: block; /* Changed from none to block */
-  opacity: 0; /* Added for fade-in effect */
-  transform: scale(0.95); /* Added for quick expand effect */
+  display: block; 
+  opacity: 0; 
+  transform: scale(0.95); 
   position: absolute;
   z-index: 1;
   color: white;
@@ -20,12 +20,12 @@
   margin-top: -23px !important;
   right: 35%;
   box-shadow: 4px 5px 14px 0px rgba(0, 0, 0, 0.10), 16px 21px 26px 0px rgba(0, 0, 0, 0.09), 35px 47px 35px 0px rgba(0, 0, 0, 0.05), 62px 84px 42px 0px rgba(0, 0, 0, 0.01), 97px 131px 46px 0px rgba(0, 0, 0, 0.00);
-  transition: opacity 0.2s, transform 0.2s; /* Added for animation */
+  transition: opacity 0.2s, transform 0.2s; 
 }
 
 .professor-rating:hover .tooltip-content {
-  opacity: 1; /* Changed to make the tooltip visible on hover */
-  transform: scale(1); /* Changed for quick expand effect */
+  opacity: 1; 
+  transform: scale(1); 
 }
 
 .highlight {
